fixed text-heading-left block padding on mobile devices

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1065,6 +1065,13 @@ section.services {
   }
 }
 
+section.text-heading-left .column {
+  @include mobile {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+}
+
 .team-slider {
   touch-action: pan-y;
   padding-top: 5rem;
